--- a/index.html
+++ b/index.html
@@ -28,13 +28,11 @@
 <body>
 
 
-  <div class="container">
-    <div class="card-wrapper">
-      <div class="card-item">
-        <img src="./images/image-qr-code.png" alt="qr code" class="card-img" />
-        <h2 class="card-title">Improve your front-end skills by building projects</h2>
-        <p class="card-desc">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-      </div>
+  <div class="card-wrapper">
+    <div class="card-item">
+      <img src="./images/image-qr-code.png" alt="qr code" class="card-img" width="576" height="576" />
+      <h2 class="card-title">Improve your front-end skills by building projects</h2>
+      <p class="card-desc">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </div>
   </div>
 
